crates/vexor-compiler/tests/golden/error/input/duplicate.vx
let r = 100
// duplicate variable r
let r = 200
let c = Circle(r)
export c
